--- a/secret recipe.htm
+++ b/secret recipe.htm
@@ -14,6 +14,7 @@
 <li>1/2 teaspoon Salt</li>
 <li>1 cup Walnuts or pecans, chopped (optional)</li>
 <li>2 cups KCC Bittersweet 60% Cacao Baking Chips</li>
+<li>1 kopp ma nutella </li>
 </ul>
 <h1>Baking instructions</h1>
 <ul>
